Update Rock Paper Scissors game UI and functionality
- Modify HTML to include score display.
- Fix event listeners for rock, paper, and scissor buttons.
- Add function to update scores dynamically in the HTML.
- Remove unnecessary automatic game invocation.
- Improve comments for better code readability.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="index.js" defer></script>
+    <script src="main.js" defer></script>
 </head>
+
 <body>
-    
+    <h1>Rock Paper Scissors</h1>
+    <div class="btn-section">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissor">Scissor</button>
+    </div>
+    <div class="results-section">
+        <p id="player-score">Player's Score: 0</p>
+        <p id="computer-score">Computer's Score: 0</p>
+    </div>
 </body>
+
 </html>
