Add winner display in HTML
- Introduce winner display in the HTML using a new element.
- Modify JavaScript to update and display the winner's message dynamically.
- Refactor announceWinner function for better clarity.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="results-section">
         <p id="player-score">Player's Score: 0</p>
         <p id="computer-score">Computer's Score: 0</p>
+        <p id="winner-message"></p>
     </div>
 </body>
 
